Initial version of the SocialFund contract with proper dependencies set

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "Finance",
     "Microfinance"
   ],
-  "author": "partha@pillarproject.io", "rafa@pillarproject.io", "alazarevski", "msazdova"
+  "author": "partha@pillarproject.io, rafa@pillarproject.io, alazarevski, msazdova",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/zincoshine/desofi/issues"
