--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@nomiclabs/buidler": "^1.2.0",
     "@nomiclabs/buidler-truffle5": "^1.2.0",
     "@nomiclabs/buidler-web3": "^1.2.0",
+    "@openzeppelin/cli": "^2.7.1",
     "@openzeppelin/contracts": "^2.5.0",
+    "@openzeppelin/contracts-ethereum-package": "^2.4.0",
+    "openzeppelin-solidity": "^2.5.0",
     "web3": "^1.2.6"
   },
   "devDependencies": {},
