--- a/react/package.json
+++ b/react/package.json
@@ -82,7 +82,7 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.41.6",
-    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-bundle-analyzer": "3.2.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpack-manifest-plugin": "^2.0.3",
