--- a/react/package.json
+++ b/react/package.json
@@ -12,9 +12,9 @@
     "npm": ">=3"
   },
   "scripts": {
-    "start": "webpack-dev-server --config=config/webpack.dev.js --hot",
+    "start": "webpack-dev-server --config=config/webpack.dev.js",
     "start:reload": "webpack-dev-server --config=config/webpack.dev.js",
-    "start:style": "cross-env MAP_STYLE=true webpack-dev-server --config=config/webpack.dev.js --hot",
+    "start:style": "cross-env MAP_STYLE=true webpack-dev-server --config=config/webpack.dev.js",
     "build": "webpack --config=config/webpack.prod.js",
     "analyze": "cross-env ENABLE_ANALYZER=true yarn build",
     "test": "jest",
@@ -30,18 +30,23 @@
     ]
   },
   "dependencies": {
+    "@babel/polyfill": "^7.8.7",
+    "ethers": "^4.0.45",
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.1",
     "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "rimble-ui": "^0.13.1",
+    "@rimble/connection-banner": "^1.1.4",
+    "@rimble/network-indicator": "^1.1.4",
     "styled-components": "^5.0.1",
-    "web3": "^1.2.6"
+    "web3": "^1.2.6",
+    "web3-react": "^5.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
