--- a/react/package.json
+++ b/react/package.json
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
+    "@rimble/connection-banner": "^1.1.4",
+    "@rimble/network-indicator": "^1.1.4",
     "ethers": "^4.0.45",
     "prop-types": "^15.6.2",
     "react": "^16.13.0",
@@ -38,12 +40,11 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.1.1",
+    "react-widgets": "^4.5.0",
     "redux": "^4.0.4",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "rimble-ui": "^0.13.1",
-    "@rimble/connection-banner": "^1.1.4",
-    "@rimble/network-indicator": "^1.1.4",
     "styled-components": "^5.0.1",
     "web3": "^1.2.6",
     "web3-react": "^5.0.5"
